master-depls/00-supervision/k8s-config/manifests/10-grafana/grafana-oauth2-ingress.yaml
#additionnal Ingress, same host but specific path for oauth2 proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
  name: grafana-oauth2-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.((/secrets/cloudfoundry_ops_domain))
      secretName: tls
  rules:
    - host: grafana.((/secrets/cloudfoundry_ops_domain))
      http:
        paths:
          - path: /oauth2
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
